--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "kunail0804@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "ext-pdo": "*"
+    }
 }
